--- a/style.css
+++ b/style.css
@@ -1,6 +1,5 @@
-/* Adding import fonts from Google Fonts */
-@import url('https://fonts.googleapis.com/css2?family=Inconsolata&display=swap');
-/* Defining variables */
+@import url("https://fonts.googleapis.com/css?family=Nunito&display=swap");
+
 :root {
   --primaryColor: #fff;
   --navColor1: #21292c;
@@ -17,24 +16,36 @@ html {
 body {
   margin: 0;
   background: #000;
-  font-family: 'Inconsolata', monospace;
+  font-family: Nunito, sans-serif;
 }
 
 /* --- Navigation Menu ------------------------------ */
 
 /* Overlay */
-.overlay{
+.overlay {
   position: fixed;
   z-index: 9;
   top: 0;
   left: 0;
   width: 100vw;
   height: 100vh;
-  background-color: rgba(0,0,0,0.7);
+  background-color: rgba(0, 0, 0, 0.7);
+  transform: translateX(-100vw);
+}
+
+.overlay-slide-right {
+  transition: all 0.4s ease-in-out;
+  transform: translateX(0);
+}
+
+.overlay-slide-left {
+  transition: all 0.8s ease-in-out;
+  transform: translateX(-100vw);
 }
 
 /* Nav Menu Items */
-nav, nav ul {
+nav,
+nav ul {
   height: 100vh;
   margin: 0;
   padding: 0;
@@ -74,7 +85,7 @@ nav li a::before {
   background-color: #fff;
   position: absolute;
   top: 47.5%;
-  left:0;
+  left: 0;
   opacity: 0;
 }
 
@@ -85,17 +96,83 @@ nav li a:hover::before {
 nav li:nth-of-type(1) {
   background-color: var(--navColor1);
 }
+
 nav li:nth-of-type(2) {
   background-color: var(--navColor2);
 }
+
 nav li:nth-of-type(3) {
   background-color: var(--navColor3);
 }
+
 nav li:nth-of-type(4) {
   background-color: var(--navColor4);
 }
+
 nav li:nth-of-type(5) {
   background-color: var(--navColor5);
+}
+
+/* Slide in animation with delay for each */
+.slide-in-1 {
+  animation: slide-in 0.4s linear 0.2s both;
+}
+
+.slide-in-2 {
+  animation: slide-in 0.4s linear 0.4s both;
+}
+
+.slide-in-3 {
+  animation: slide-in 0.4s linear 0.6s both;
+}
+
+.slide-in-4 {
+  animation: slide-in 0.4s linear 0.8s both;
+}
+
+.slide-in-5 {
+  animation: slide-in 0.4s linear 1s both;
+}
+
+@keyframes slide-in {
+  from {
+    transform: translateX(-100%);
+  }
+
+  to {
+    transform: translateX(0);
+  }
+}
+
+/* Slide out animation with delay for each */
+.slide-out-1 {
+  animation: slide-out 0.3s linear 0.5s both;
+}
+
+.slide-out-2 {
+  animation: slide-out 0.3s linear 0.4s both;
+}
+
+.slide-out-3 {
+  animation: slide-out 0.3s linear 0.3s both;
+}
+
+.slide-out-4 {
+  animation: slide-out 0.3s linear 0.2s both;
+}
+
+.slide-out-5 {
+  animation: slide-out 0.3s linear 0.1s both;
+}
+
+@keyframes slide-out {
+  from {
+    transform: translateX(0);
+  }
+
+  to {
+    transform: translateX(-100%);
+  }
 }
 
 /* --- Menu Bars ------------------------------------ */
